--- a/weather/src/main/res/layout/top_title_layout.xml
+++ b/weather/src/main/res/layout/top_title_layout.xml
@@ -28,9 +28,7 @@
             android:id="@+id/iv_share"
             android:layout_width="@dimen/actionbar_width"
             android:layout_height="@dimen/actionbar_height"
-            android:background="@drawable/selector_actionbar_share"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            android:background="@drawable/selector_actionbar_share"/>
 
         <ImageView
             android:visibility="gone"
